Update and rename sites.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Angel Manuel Guevara Chavarría">
+    <meta name="copyright" content="© 2025 Aula Privada Técnica. Todos los derechos reservados.">
+    <meta name="description" content="Sitio oficial de APT-Angel Manuel Guevara Chavarría. Contenido protegido por derechos de autor. Plagio y apropiación no permitidos.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Atención! Apertura Oficial APT</title>
-    <link rel="stylesheet" href="sites.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="contenedor-anuncio">
@@ -31,4 +34,5 @@
     </div>
     <script src="script.sites.js"></script>
 </body>
+
 </html>
