--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             Regresar a la Web Principal
         </button>
     </div>
-    <script src="script.sites.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
+
